<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:text="@string/top_red_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:onClick="donate"
            android:src="@drawable/btn_donate" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonChooseGif"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_addgif"
            android:onClick="chooseGifClick"
            android:text="@string/choose_a_gif" />

        <Spinner
            android:id="@+id/spinner_gifnumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:popupBackground="@drawable/shape"
            android:spinnerMode="dropdown" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/giphy"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonKill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:onClick="killSystemUI"
            android:text="@string/restart_systemui"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hide_bottom_carrier_label" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:sb_show_indicator="false" />

        <TextView
            android:id="@+id/textViewDisable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/disable" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:sb_show_indicator="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewFade"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fade" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchFade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:sb_show_indicator="false" />

        <TextView
            android:id="@+id/textViewLock"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/show_on_lock" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:sb_show_indicator="false" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="15"
            android:background="@android:color/black"
            android:onClick="seekbarBtnSub0"
            android:src="@drawable/line" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:max="2000"
            android:progressDrawable="@drawable/seek_bar_ruler"
            android:thumb="@drawable/seek_bar_slider" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="15"
            android:background="@android:color/black"
            android:onClick="seekbarBtnAdd0"
            android:src="@drawable/cross" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTransparency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/opacity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="15"
            android:background="@android:color/black"
            android:onClick="seekbarBtnSub1"
            android:src="@drawable/line" />

        <SeekBar
            android:id="@+id/seekBarTransparency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:max="100"
            android:progressDrawable="@drawable/seek_bar_ruler"
            android:thumb="@drawable/seek_bar_slider" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="15"
            android:background="@android:color/black"
            android:onClick="seekbarBtnAdd1"
            android:src="@drawable/cross" />
    </LinearLayout>

    <include
        android:id="@+id/margins_seekbars_layout"
        layout="@layout/margins_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expand_margins_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_more" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_more" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_positions_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:horizontalSpacing="5dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="5dp" />
</LinearLayout>